--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -22,7 +22,6 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-LDADD = gnulib/lib/libgnu.a
 AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
@@ -37,7 +36,8 @@ bin_PROGRAMS = astconvolve
 astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
-astconvolve_LDADD = -lfitsarrayvv -lcheckset -ltiming -lconfigfiles
+astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lfitsarrayvv	\
+-lcheckset -ltiming -lconfigfiles
 
 
 
