--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -37,7 +37,7 @@ astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
 astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lfitsarrayvv	\
--lcheckset -ltiming -lconfigfiles
+-lcheckset -ltiming -lconfigfiles -lspatialconvolve
 
 
 
