--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -1,18 +1,16 @@
 ## Process this file with automake to produce Makefile.inx
 ##
-## This is part of GNU Astronomy Utilities (gnuastro). It will be
-## called by the Makefile.am in the top directory.
+## Original author:
+##     Mohammad Akhlaghi <akhlaghi@gnu.org>
+## Contributing author(s):
+## Copyright (C) 2015, Free Software Foundation, Inc.
 ##
-## Copyright (C) 2013-2015 Mohammad Akhlaghi
-## Tohoku University Astronomical Institute, Sendai, Japan.
-## http://astr.tohoku.ac.jp/~akhlaghi/
-##
-## gnuastro is free software: you can redistribute it and/or modify it
+## Gnuastro is free software: you can redistribute it and/or modify it
 ## under the terms of the GNU General Public License as published by
 ## the Free Software Foundation, either version 3 of the License, or
 ## (at your option) any later version.
 ##
-## gnuastro is distributed in the hope that it will be useful, but
+## Gnuastro is distributed in the hope that it will be useful, but
 ## WITHOUT ANY WARRANTY; without even the implied warranty of
 ## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 ## General Public License for more details.
