Spatial convolution added to Convolve
Spatial convolution (correcting for edge effects and ignoring them) is
now included in Convolve.

The AX_PTHREAD macro was also imported from the GNU Autoconf archives.

Until now the programs needed an output in their configuration file,
but now they can operate without it.

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,6 +23,11 @@
 
 ## Directories to check:
 ## =====================
+##
+## Gnulib is intentionally compiled and tested prior to the gnuastro
+## progams. With this configuration, the user can confirm if the
+## problem is internal to gnulib or still persists after all the
+## Gnulib tests have been done.
 if COND_CONVERTT
   MAYBE_CONVERTT = src/convertt
 endif
