--- a/src/convertt/astconvertt.conf
+++ b/src/convertt/astconvertt.conf
@@ -1,4 +1,4 @@
-# Default parameters (System) for MakeProfiles.
+# Default parameters (System) for ConvertType.
 # MakeProfiles is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
@@ -24,10 +24,10 @@
  hdu4                 0
 
 # Output:
- output               .jpg
  quality              100
  widthincm            10.0
  borderwidth          1
+ output               jpg
 
 # Flux:
  fluxlow              0.0
