--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -35,7 +35,7 @@ astconvolve_SOURCES = main.c main.h args.h ui.c ui.h convolve.c	\
 convolve.h cite.h
 
 astconvolve_LDADD = $(top_builddir)/gnulib/lib/libgnu.a -lfitsarrayvv	\
--lcheckset -ltiming -lconfigfiles -lspatialconvolve -lbox
+-lcheckset -ltiming -lconfigfiles -lastrthreads -lspatialconvolve -lbox
 
 
 
