--- a/src/convolve/astconvolve.conf
+++ b/src/convolve/astconvolve.conf
@@ -1,4 +1,4 @@
-# Default parameters (System) for MakeProfiles.
+# Default parameters (System) for Convolve.
 # MakeProfiles is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
@@ -17,11 +17,13 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
+# Operating mode:
+ spatial              1
+ frequency            0
+
 # Input:
  hdu                  0
  kernel               kernel.fits
  khdu                 0
 
 # Output:
- output               convolved.fits
- blankweight          0.01
