--- a/src/imgcrop/Makefile.am
+++ b/src/imgcrop/Makefile.am
@@ -20,7 +20,7 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs $(LIB_PTHREAD) -lm -L$(top_builddir)/lib
+AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
 
