--- a/src/mkprof/Makefile.am
+++ b/src/mkprof/Makefile.am
@@ -21,8 +21,7 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-LDADD = gnulib/lib/libgnu.a
-AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas $(LIB_PTHREAD) -lm	\
+AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm	\
 -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
