Frequency domain convolution added to Convolve
Using the GSL FFT functions, the frequency domain convolution is now
complete. It is done really fast thanks to POSIX Threads.

--- a/src/convolve/Makefile.am
+++ b/src/convolve/Makefile.am
@@ -18,9 +18,10 @@
 ## You should have received a copy of the GNU General Public License
 ## along with gnuastro. If not, see <http://www.gnu.org/licenses/>.
 
+
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
+AM_LDFLAGS = -lcfitsio -lwcs  -lgsl -lgslcblas -lm -L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
 
