--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -33,7 +33,7 @@ imgcrop/section.sh imgcrop/radec.sh convertt/fitstotxt.sh		\
 convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh	\
 convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh			\
 convertt/fitstopdf.sh convolve/spatial.sh				\
-convolve/spatial_noedgecorr.sh
+convolve/frequency.sh
 
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt mkprof/mkprofcat2.txt	\
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
