Started work on ImageTransform
Work on ImageTransform is now started.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,6 +37,9 @@ endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
+if COND_IMGTRANSFORM
+  MAYBE_IMGTRANSFORM = src/imgtransform
+endif
 if COND_MKPROF
   MAYBE_MKPROF = src/mkprof
 endif
@@ -44,7 +47,8 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)	\
-$(MAYBE_CONVOLVE) $(MAYBE_IMGCROP) $(MAYBE_MKPROF) doc tests
+$(MAYBE_CONVOLVE) $(MAYBE_IMGCROP) $(MAYBE_IMGTRANSFORM)	\
+$(MAYBE_MKPROF) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
