ImageTransform changed to ImageWarp
As explained in the manual, Transformation might be confused with a
more general kind of transform where pixel values are also
transformed. So the name of the program was changed to ImageWarp.

--- a/Makefile.am
+++ b/Makefile.am
@@ -37,8 +37,8 @@ endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
-if COND_IMGTRANSFORM
-  MAYBE_IMGTRANSFORM = src/imgtransform
+if COND_IMGWARP
+  MAYBE_IMGWARP = src/imgwarp
 endif
 if COND_MKPROF
   MAYBE_MKPROF = src/mkprof
@@ -46,9 +46,9 @@ endif
 if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
-SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)	\
-$(MAYBE_CONVOLVE) $(MAYBE_IMGCROP) $(MAYBE_IMGTRANSFORM)	\
-$(MAYBE_MKPROF) doc tests
+SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
+$(MAYBE_CONVOLVE) $(MAYBE_IMGCROP) $(MAYBE_IMGWARP) $(MAYBE_MKPROF)	\
+doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
