--- a/src/imgwarp/astimgwarp.conf
+++ b/src/imgwarp/astimgwarp.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for ImageTransform.
-# ImageTransform is part of GNU Astronomy Utitlies.
+# Default parameters (System) for ImageWarp.
+# ImageWarp is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
