--- a/src/imgwarp/Makefile.am
+++ b/src/imgwarp/Makefile.am
@@ -20,7 +20,8 @@
 
 # Flags:
 AM_CFLAGS = -Wall -O3
-AM_LDFLAGS = -lcfitsio -lwcs -lm -L$(top_builddir)/lib
+AM_LDFLAGS = -lcfitsio -lwcs -lgsl -lgslcblas -lm	\
+-L$(top_builddir)/lib
 AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 -I$(top_builddir)/gnulib/lib -I$(top_srcdir)/gnulib/lib
 
