--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -36,8 +36,8 @@ imgcrop/wcscat.sh imgcrop/xcyc.sh imgcrop/xcycnoblank.sh		\
 imgcrop/section.sh imgcrop/radec.sh convertt/fitstotxt.sh		\
 convertt/fitstojpeg.sh convertt/blankch.sh convertt/jpegtotxt.sh	\
 convertt/fitstojpegcmyk.sh convertt/jpegtofits.sh			\
-convertt/fitstopdf.sh convolve/spatial.sh				\
-convolve/frequency.sh imgwarp/imgwarp_scale.sh imgwarp/homographic.sh
+convertt/fitstopdf.sh convolve/spatial.sh convolve/frequency.sh		\
+imgwarp/imgwarp_scale.sh imgwarp/homographic.sh mknoise/addnoise.sh
 
 EXTRA_DIST = $(TESTS) mkprof/mkprofcat1.txt mkprof/mkprofcat2.txt	\
 mkprof/mkprofcat3.txt mkprof/mkprofcat4.txt imgcrop/cat.txt
