Started work on Header
Header is a program to print and manipulate the header information in
a data file.

--- a/Makefile.am
+++ b/Makefile.am
@@ -34,6 +34,9 @@ endif
 if COND_CONVOLVE
   MAYBE_CONVOLVE = src/convolve
 endif
+if COND_HEADER
+  MAYBE_HEADER = src/header
+endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
@@ -50,8 +53,8 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
-$(MAYBE_CONVOLVE) $(MAYBE_IMGCROP) $(MAYBE_IMGWARP) $(MAYBE_MKNOISE)	\
-$(MAYBE_MKPROF) doc tests
+$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGWARP)	\
+$(MAYBE_MKNOISE) $(MAYBE_MKPROF) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
