--- a/.gitignore
+++ b/.gitignore
@@ -58,4 +58,6 @@ doc/stamp-vti
 autom4te.cache
 doc/texinfo.tex
 doc/version.texi
+www/gnuastro/CVS/
+www/gnuastro/manual/
 doc/subpackageversions.texi
