Added style sheet for online manual
A very small style sheet was added for displaying the manual.

Also some minor corrections to the webpage and manual were also
applied.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,6 @@ doc/stamp-vti
 autom4te.cache
 doc/texinfo.tex
 doc/version.texi
-www/gnuastro/CVS/
-www/gnuastro/manual/
+doc/www/gnuastro/CVS/
+doc/www/gnuastro/manual/
 doc/subpackageversions.texi
