MakeProfiles now makes flat and circumference profiles
Two new profile types were added to MakeProfiles: Flat and
Circumference.

task #13575 closed.

--- a/src/mkprof/astmkprof.conf
+++ b/src/mkprof/astmkprof.conf
@@ -17,10 +17,14 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
+# Input:
+ hdu                   0
+
 # Output:
  naxis1             1000
  naxis2             1000
  oversample            5
+ circumwidth           2
 
 # Profiles:
  tunitinp              0
