--- a/src/subtractsky/astsubtractsky.conf
+++ b/src/subtractsky/astsubtractsky.conf
@@ -19,8 +19,15 @@
 
 # Input:
  hdu            0
+ mhdu           1
  numnearest     9
  mininterp      5
  kernelwidth    5
 
 # Output:
+
+# Mesh grid:
+ meshsize      32
+ nch1           1
+ nch2           1
+ lastmeshfrac 0.6
