SubtractSky finds the sky on successful meshes
The first major part of SubtractSky is now added: It will find the sky
value on the mesh grid elements that can give a value (whose mode and
median are approximately equal). Interpolation and smoothing are still
left to be done.

To check the mode of the image, before continuing on to finish
SubtractSky, ImageStatistics will be added.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -30,14 +30,18 @@ AM_CPPFLAGS = -DSYSCONFIG_DIR=\"$(sysconfdir)\" -I$(top_srcdir)/include	\
 noinst_LTLIBRARIES = libconfigfiles.la libfitsarrayvv.la	\
 libtxtarrayvv.la libcheckset.la liblinkedlist.la libtiming.la	\
 libastrthreads.la libbox.la libarraymanip.la libstatistics.la	\
-libspatialconvolve.la libmesh.la
+libspatialconvolve.la libmesh.la libmode.la libforqsort.la
 
 libbox_la_SOURCES = box.c $(top_srcdir)/include/box.h
 libbox_la_LIBADD = -lm
 
 libmesh_la_SOURCES = mesh.c $(top_srcdir)/include/mesh.h
 
+libmode_la_SOURCES = mode.c $(top_srcdir)/include/mode.h
+
 libtiming_la_SOURCES = timing.c $(top_srcdir)/include/timing.h
+
+libforqsort_la_SOURCES = forqsort.c $(top_srcdir)/include/forqsort.h
 
 libcheckset_la_SOURCES = checkset.c $(top_srcdir)/include/checkset.h
 
