--- a/src/subtractsky/astsubtractsky.conf
+++ b/src/subtractsky/astsubtractsky.conf
@@ -18,16 +18,22 @@
 # without any warranty.
 
 # Input:
- hdu            0
- mhdu           1
- numnearest     9
- mininterp      5
- kernelwidth    5
+ hdu                0
+ mhdu               1
+ numnearest         9
+ mininterp          5
+ kernelwidth        5
 
 # Output:
 
 # Mesh grid:
- meshsize      32
- nch1           1
- nch2           1
- lastmeshfrac 0.6
+ meshsize          32
+ nch1               1
+ nch2               1
+ lastmeshfrac     0.6
+
+# Statistics:
+ mirrordist       1.5
+ minmodeq        0.49
+ sigclipmultip      3
+ sigcliptolerance 0.2
