Started working on ImageStatistics
Started the work on ImageStatistics. The basic UI is now
ready. Further work is needed to finish it soon.

--- a/Makefile.am
+++ b/Makefile.am
@@ -40,6 +40,9 @@ endif
 if COND_IMGCROP
   MAYBE_IMGCROP = src/imgcrop
 endif
+if COND_IMGSTAT
+  MAYBE_IMGSTAT = src/imgstat
+endif
 if COND_IMGWARP
   MAYBE_IMGWARP = src/imgwarp
 endif
@@ -56,8 +59,9 @@ if COND_GNULIBCHECK
   MAYBE_GNULIBCHECK = gnulib/tests
 endif
 SUBDIRS = gnulib/lib $(MAYBE_GNULIBCHECK) lib $(MAYBE_CONVERTT)		\
-$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGWARP)	\
-$(MAYBE_MKNOISE) $(MAYBE_MKPROF) $(MAYBE_SUBTRACTSKY) doc tests
+$(MAYBE_CONVOLVE) $(MAYBE_HEADER) $(MAYBE_IMGCROP) $(MAYBE_IMGSTAT)	\
+$(MAYBE_IMGWARP) $(MAYBE_MKNOISE) $(MAYBE_MKPROF)			\
+$(MAYBE_SUBTRACTSKY) doc tests
 
 
 ACLOCAL_AMFLAGS = -I m4
