--- a/src/imgstat/astimgstat.conf
+++ b/src/imgstat/astimgstat.conf
@@ -1,5 +1,5 @@
-# Default parameters (System) for SubtractSky.
-# SubtractSky is part of GNU Astronomy Utitlies.
+# Default parameters (System) for ImageStatistics.
+# ImageStatistics is part of GNU Astronomy Utitlies.
 #
 # Use the long option name of each paramter followed by
 # a value. The name and value should be separated by
@@ -17,23 +17,16 @@
 # notice and this notice are preserved.  This file is offered as-is,
 # without any warranty.
 
-# Input:
- hdu                0
- mhdu               0
- numnearest         9
- mininterp          5
- kernelwidth        5
+# Input image:
+ hdu                 0
 
 # Output:
 
-# Mesh grid:
- meshsize          32
- nch1               1
- nch2               1
- lastmeshfrac     0.6
+# Histogram:
+ histnumbins         200
 
-# Statistics:
- mirrordist       1.5
- minmodeq        0.49
- sigclipmultip      3
- sigcliptolerance 0.2
+# Cumulative frequency plot:
+ cfpnum              200
+ sigclipmultip       4.000
+ sigcliptolerance    0.200
+ sigclipnum          5
