WCSLIB version, ASCII85 in EPS and minor corrections
Added support for wcslib_version in WSCLIB 5.5. Soon the other new
features of WCSLIB 5.x will also be implemented.

ASCII85 encoding was also applied for the EPS output of
ConvertType. This shrinks the storage space of each EPS image by
nearly 40 percent compared to Hexadecimal format. There is an option
for the user if they insist on Hexadecimal EPS output.

Made some small corrections to some functions, see the ChangeLog.

--- a/configure.ac
+++ b/configure.ac
@@ -62,6 +62,9 @@ AC_CHECK_LIB([gslcblas], [cblas_sdsdot], [absolutejunk=1],
 AC_CHECK_LIB([gsl], [gsl_integration_qng], [absolutejunk=1],
              [AC_MSG_ERROR([Cannot continue.])], [-lgslcblas -lm])
 
+AC_CHECK_LIB([wcs], [wcslib_version],
+             [AC_DEFINE([HAVE_WCSLIBVERSION], [1], [Has wcslib_version])],
+             [], [-lcfitsio -lm])
 AC_CHECK_LIB([pthread], [pthread_barrier_wait],
              [AC_DEFINE([HAVE_PTHREAD_BARRIER], [1], [Has pthread_barrier])])
 
