First version of SubtractSky complete
SubtractSky seems to have reached a good place and seems to be working
nicely. It now smooths the interpolated array and then subtracts the
sky value from the input image.

--- a/src/subtractsky/Makefile.am
+++ b/src/subtractsky/Makefile.am
@@ -35,8 +35,9 @@ astsubtractsky_SOURCES = main.c main.h cite.h ui.c ui.h args.h	\
 subtractsky.c subtractsky.h
 
 astsubtractsky_LDADD = $(top_builddir)/gnulib/lib/libgnu.a		\
--lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh -lastrthreads	\
--lmode -lstatistics -larraymanip -lforqsort -llinkedlist
+-lconfigfiles -lfitsarrayvv -lcheckset -ltiming -lmesh			\
+-lspatialconvolve -lastrthreads -lmode -lstatistics -larraymanip	\
+-lforqsort -llinkedlist -lbox
 
 
 
