--- a/src/subtractsky/astsubtractsky.conf
+++ b/src/subtractsky/astsubtractsky.conf
@@ -20,8 +20,6 @@
 # Input:
  hdu                0
  mhdu               0
- numnearest         9
- kernelwidth        5
 
 # Output:
 
@@ -30,6 +28,8 @@
  nch1               1
  nch2               1
  lastmeshfrac     0.6
+ numnearest         9
+ smoothwidth        5
 
 # Statistics:
  mirrordist       1.5
